PaW Carousel V2 - complete rewrite to make more reliable, faster and to support higher resolution devices

--- a/public/css/otherstyles.css
+++ b/public/css/otherstyles.css
@@ -13,7 +13,7 @@ q:before, q:after, blockquote:before, blockquote:after { content: ""; content: n
 
 a img { border: none; }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary { display: block; }
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
 .un-underline { text-decoration: none; }
 .un-underline:hover { text-decoration: underline; }
@@ -30,9 +30,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 .row { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
 
-.column, .columns { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
+.column, .columns { float: left; min-height: 1px; padding: 0 2px; position: relative; }
 
-.right { display: inline; float: right; }
+.right { float: right; }
 
 .one, .row .one { width: 8.33333%; }
 
@@ -64,15 +64,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 .panel { padding: 8px; }
 
-.right { display: inline; float: right; }
+.right { float: right; }
 
-.left { display: inline; float: left; }
+.left { float: left; }
 
 .panel { padding: 8px; }
 
 @media only screen and (max-width: 1099px) { .row-med-lrg { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
-  .column-med-lrg, .columns-med-lrg { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
-  .right-med-lrg { display: inline; float: right; }
+  .column-med-lrg, .columns-med-lrg { float: left; min-height: 1px; padding: 0 2px; position: relative; }
+  .right-med-lrg { float: right; }
   .one-med-lrg, .row .one-med-lrg { width: 8.33333%; }
   .two-med-lrg, .row .two-med-lrg { width: 16.66667%; *width: 16.2%; }
   .three-med-lrg, .row .three-med-lrg { width: 25%; *width: 24.6%; }
@@ -88,11 +88,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .hide-med-lrg { display: none !important; }
   .show-med-lrg { display: block !important; }
   .panel-med-lrg { padding: 8px; }
-  .right-med-lrg { display: inline; float: right; }
-  .left-med-lrg { display: inline; float: left; } }
+  .right-med-lrg { float: right; }
+  .left-med-lrg { float: left; } }
 @media only screen and (max-width: 1024px) { .row-med { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
-  .column-med, .columns-med { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
-  .right-med { display: inline; float: right; }
+  .column-med, .columns-med { float: left; min-height: 1px; padding: 0 2px; position: relative; }
+  .right-med { float: right; }
   .one-med, .row .one-med { width: 8.33333%; }
   .two-med, .row .two-med { width: 16.66667%; *width: 16.2%; }
   .three-med, .row .three-med { width: 25%; *width: 24.6%; }
@@ -108,11 +108,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .hide-med { display: none !important; }
   .show-med { display: block !important; }
   .panel-med { padding: 8px; }
-  .right-med { display: inline; float: right; }
-  .left-med { display: inline; float: left; } }
+  .right-med { float: right; }
+  .left-med { float: left; } }
 @media only screen and (max-width: 719px) { .row-sml-med { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
-  .column-sml-med, .columns-sml-med { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
-  .right-sml-med { display: inline; float: right; }
+  .column-sml-med, .columns-sml-med { float: left; min-height: 1px; padding: 0 2px; position: relative; }
+  .right-sml-med { float: right; }
   .one-sml-med, .row .one-sml-med { width: 8.33333%; }
   .two-sml-med, .row .two-sml-med { width: 16.66667%; *width: 16.2%; }
   .three-sml-med, .row .three-sml-med { width: 25%; *width: 24.6%; }
@@ -128,12 +128,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .hide-sml-med { display: none !important; }
   .show-sml-med { display: block !important; }
   .panel-sml-med { padding: 8px; }
-  .right-sml-med { display: inline; float: right; }
-  .left-sml-med { display: inline; float: left; }
+  .right-sml-med { float: right; }
+  .left-sml-med { float: left; }
   .master { padding-left: 15px; padding-right: 15px; } }
 @media only screen and (max-width: 480px) { .row-sml { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
-  .column-sml, .columns-sml { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
-  .right-sml { display: inline; float: right; }
+  .column-sml, .columns-sml { float: left; min-height: 1px; padding: 0 2px; position: relative; }
+  .right-sml { float: right; }
   .one-sml, .row .one-sml { width: 8.33333%; }
   .two-sml, .row .two-sml { width: 16.66667%; *width: 16.2%; }
   .three-sml, .row .three-sml { width: 25%; *width: 24.6%; }
@@ -149,11 +149,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .hide-sml { display: none !important; }
   .show-sml { display: block !important; }
   .panel-sml { padding: 8px; }
-  .right-sml { display: inline; float: right; }
-  .left-sml { display: inline; float: left; } }
+  .right-sml { float: right; }
+  .left-sml { float: left; } }
 @media only screen and (max-width: 480px) { .row-x-sml { width: auto; max-width: none; min-width: 0; margin-left: -2px; margin-right: -2px; padding: 0; }
-  .column-x-sml, .columns-x-sml { display: inline; float: left; min-height: 1px; padding: 0 2px; position: relative; }
-  .right-x-sml { display: inline; float: right; }
+  .column-x-sml, .columns-x-sml { float: left; min-height: 1px; padding: 0 2px; position: relative; }
+  .right-x-sml { float: right; }
   .one-x-sml, .row .one-x-sml { width: 8.33333%; }
   .two-x-sml, .row .two-x-sml { width: 16.66667%; *width: 16.2%; }
   .three-x-sml, .row .three-x-sml { width: 25%; *width: 24.6%; }
@@ -169,15 +169,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .hide-x-sml { display: none !important; }
   .show-x-sml { display: block !important; }
   .panel-x-sml { padding: 8px; }
-  .right-x-sml { display: inline; float: right; }
-  .left-x-sml { display: inline; float: left; } }
+  .right-x-sml { float: right; }
+  .left-x-sml { float: left; } }
 /*General styles*/
 html, body { overflow: auto; overflow-x: hidden; }
 
-body { font-size: 15px; font-family: helvetica, arial, sans-serif; color: #20271b; }
-body.mobile-browser { -webkit-text-size-adjust: none; }
+body { font-size: 15px; font-family: helvetica, arial, sans-serif; color: #20271B; }
 
-a { text-decoration: none; color: #20271b; }
+a { text-decoration: none; color: #20271B; }
 a:focus { outline: 0; }
 
 strong { font-weight: bold; }
@@ -200,7 +199,7 @@ p a { text-decoration: underline; }
 p a.un-underline { text-decoration: none; }
 p a.un-underline:hover { text-decoration: underline; }
 
-.replace { display: -moz-inline-stack; display: inline-block; vertical-align: middle; *vertical-align: auto; zoom: 1; *display: inline; text-indent: -9999em; overflow: hidden; height: 0px; width: 0px; float: left; }
+.replace { display: inline-block; vertical-align: middle; *vertical-align: auto; *zoom: 1; *display: inline; text-indent: -9999em; overflow: hidden; height: 0px; width: 0px; float: left; }
 
 .text-content ul, .text-content ol { margin-bottom: 10px; }
 .text-content li { line-height: 170%; margin: 0 0 0 30px; padding-left: 0px; }
@@ -215,9 +214,9 @@ p a.un-underline:hover { text-decoration: underline; }
 .text-content h3 { font-weight: 600; margin-bottom: 10px; }
 .text-content table { min-width: 700px; margin: 15px 0; font-size: 13px; }
 .text-content table th, .text-content table td { padding: 7px; }
-.text-content table th { background-color: #499a28; color: white; border: 1px solid white; font-weight: 600; }
-.text-content table th a { color: white; }
-.text-content table td { background-color: #f3f3f3; border: 1px solid white; line-height: 130%; }
+.text-content table th { background-color: #499a28; color: #fff; border: 1px solid #fff; font-weight: 600; }
+.text-content table th a { color: #fff; }
+.text-content table td { background-color: #f3f3f3; border: 1px solid #fff; line-height: 130%; }
 .text-content table thead th { line-height: 140%; font-size: 14px; }
 
 .text-contain { max-width: 800px; }
@@ -226,8 +225,8 @@ p a.un-underline:hover { text-decoration: underline; }
 
 code { font-family: courier, monospace; font-size: 14px; line-height: 140%; background-color: #f3f3f3; }
 
-pre { -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; display: block; background-color: #f3f3f3; margin-bottom: 15px; border: 1px solid #d9d9d9; overflow: auto; padding: 15px; }
+pre { -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; display: block; background-color: #f3f3f3; margin-bottom: 15px; border: 1px solid #d9d9d9; overflow: auto; padding: 15px; }
 
-footer { border-top: 1px solid #20271b; margin-top: 20px; padding: 20px; text-align: center; }
+footer { border-top: 1px solid #20271B; margin-top: 20px; padding: 20px; text-align: center; }
 
 @media only screen and (max-width: 719px) { h1 { font-size: 20px; } }
