--- a/public/css/pawcarousel.css
+++ b/public/css/pawcarousel.css
@@ -3,47 +3,64 @@
 
 .scale { display: block; max-width: 100%; }
 
+.paw-carousel-prev, .paw-carousel-next, .paw-carousel-icn-thumb-vid { -moz-transition: opacity, 0.2s; -o-transition: opacity, 0.2s; -webkit-transition: opacity, 0.2s; transition: opacity, 0.2s; }
+
 /*The wrapping div surrounding the carousel. Needed to position absolute elements*/
 .paw-carousel-wrap { *zoom: 1; position: relative; margin-bottom: 20px; }
 .paw-carousel-wrap:after { content: ""; display: table; clear: both; }
 
 /*Transparent masks on either side of the carousel - remove if you don't need*/
-.paw-carousel-mask { position: absolute; height: 100%; width: 9999px; background: url(../images/trans-light.png); z-index: 102; top: 0; }
+.paw-carousel-mask-l, .paw-carousel-mask-r { position: absolute; height: 100%; width: 9999px; background: url(../images/trans-light.png); z-index: 102; top: 0; }
 
 .paw-carousel-mask-l { left: -9999px; }
 
 .paw-carousel-mask-r { right: -9999px; }
 
-/*Loading mask*/
-.paw-loading { z-index: 101; background-color: white; position: absolute; width: 100%; height: 100%; text-align: center; }
-.paw-loading .inner { position: absolute; top: 50%; width: 100%; margin-top: -30px; }
-.paw-loading p { margin-top: 5px; }
-
-/*Carousel*/
 .paw-carousel { position: relative; overflow: visible !important; height: 370px; }
-.paw-carousel nav { position: absolute; top: 50%; margin-top: -25px; z-index: 101; width: 100%; }
 
-.paw-carousel-media { height: 100%; overflow: hidden; position: absolute; }
+.paw-carousel-items-wrap { height: 100%; overflow: hidden; position: absolute; top: 0; left: 0; }
 
-.paw-carousel-item { display: inline; float: left; position: relative !important; }
-.paw-carousel-item img { display: block; position: relative; z-index: 1; margin-right: 1px; }
-.paw-carousel-item h3 { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; position: absolute; z-index: 2; top: 10px; left: 10px; padding: 5px; font-size: 12px; font-weight: 600; line-height: 140%; background: #000; color: white; }
+.paw-carousel-item { float: left; position: relative !important; margin-right: 2px; max-width: 100%; }
+.paw-carousel-item.active { background: url(../images/ajax-loader.gif) center no-repeat; }
+.paw-carousel-item h3 { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; position: absolute; z-index: 2; top: 10px; left: 10px; padding: 5px; font-size: 12px; font-weight: 600; line-height: 140%; background: #000; color: #fff; }
+.paw-carousel-item.cropped { margin-right: 0; overflow: hidden; text-align: center; }
+.paw-carousel-item.cropped .paw-carousel-item-media { width: auto; display: inline-block; }
+.paw-carousel-item.cropped .paw-carousel-item-vid { width: 100% !important; }
+.paw-carousel-item.paw-carousel-item-visible { background: none; }
+.paw-carousel-item.paw-carousel-item-visible .paw-carousel-item-media { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10000); opacity: 100; }
 
-/*Next prev arrows*/
-.paw-carousel-prev, .paw-carousel-next { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; -webkit-transition-duration: 0.2s; -moz-transition-duration: 0.2s; -o-transition-duration: 0.2s; transition-duration: 0.2s; position: absolute; top: 0; width: 50px; height: 50px; left: 20px; background: url(../images/arr-prev.png); }
+.paw-carousel-item-vid { position: absolute; top: 0; left: 0; }
+
+.paw-caoursel-item-vid-foundation { max-width: 100%; }
+
+.paw-carousel-item-media { -moz-transition: opacity, 0.8s; -o-transition: opacity, 0.8s; -webkit-transition: opacity, 0.8s; transition: opacity, 0.8s; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; display: block; z-index: 1; max-width: 9999px; }
+
+/*===================================
+=            Control nav            =
+===================================*/
+.paw-carousel-prev, .paw-carousel-next { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; position: absolute; top: 50%; margin-top: -25px; z-index: 101; width: 50px; height: 50px; }
 .paw-carousel-prev:hover, .paw-carousel-next:hover { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90); opacity: 0.9; }
+.paw-carousel-prev img, .paw-carousel-next img { display: block; }
 
-.paw-carousel-next { left: auto; right: 20px; background: url(../images/arr-next.png); }
+.paw-carousel-prev { left: 20px; }
 
-/*Thumbnail nav*/
-#paw-carousel-thumbs { *zoom: 1; }
-#paw-carousel-thumbs:after { content: ""; display: table; clear: both; }
-#paw-carousel-thumbs li { margin-right: 10px; margin-top: 10px; display: block; border: 2px solid white; display: inline; float: left; }
-#paw-carousel-thumbs li:first-child { margin-right: 11px; }
-#paw-carousel-thumbs li:last-child { margin-right: 0; margin-left: 1px; }
-#paw-carousel-thumbs li:hover { border-color: #b9e8a6; cursor: pointer; }
-#paw-carousel-thumbs li.active { border-color: #79d355; }
-#paw-carousel-thumbs li img { display: block; }
+.paw-carousel-next { right: 20px; }
+
+/*=====================================
+=            Thumbnail nav            =
+=====================================*/
+.paw-carousel-thumbs { *zoom: 1; }
+.paw-carousel-thumbs:after { content: ""; display: table; clear: both; }
+.paw-carousel-thumbs li { margin-right: 10px; margin-top: 10px; display: block; border: 2px solid #fff; position: relative; float: left; }
+.paw-carousel-thumbs li:last-child { margin-right: 0; }
+.paw-carousel-thumbs li:hover { border-color: #a2c6f0; cursor: pointer; }
+.paw-carousel-thumbs li:hover .paw-carousel-icn-thumb-vid { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; }
+.paw-carousel-thumbs li.active { border-color: #4A90E2; }
+.paw-carousel-thumbs li.active .paw-carousel-icn-thumb-vid { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); opacity: 0.7; }
+.paw-carousel-thumbs li img { display: block; }
+
+.paw-carousel-icn-thumb-vid { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50); opacity: 0.5; position: absolute; top: 50%; left: 50%; margin-left: -21px; margin-top: -15px; width: 42px; height: 30px; background: url(../images/icn-play.svg); }
 
 /*At 1024px screen res stops the slideshow bleeding out it's container i.e. being full width*/
-@media only screen and (max-width: 1024px) { .paw-carousel { overflow: hidden !important; } }
+@media only screen and (max-width: 1024px) { .paw-carousel { overflow: hidden !important; }
+  .paw-carousel-mask { display: none; } }
